--- a/src/routes/Repositories.module.css
+++ b/src/routes/Repositories.module.css
@@ -9,6 +9,7 @@
     padding: 2rem;
     border-radius: 1rem;
     display: flex;
+    flex-direction: column;
     align-items: center;
     flex-wrap: wrap;
     gap: 1.2rem;
